fix: AuthState background in dark mode

--- a/apps/web/src/features/spaces/components/Dashboard/styles.module.css
+++ b/apps/web/src/features/spaces/components/Dashboard/styles.module.css
@@ -6,13 +6,16 @@
   justify-content: center;
 }
 
+.contentWrapper {
+  position: relative;
+  z-index: 1;
+}
+
 .contentInner {
   background-color: var(--color-background-paper);
   max-width: 500px;
   padding: var(--space-5);
   border-radius: var(--space-1);
-  position: relative;
-  z-index: 1;
 }
 
 .contentBg {
